--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@anthropic-ai/claude-agent-sdk": "^0.1.70"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.2",
     "eslint": "^9.17.0",
     "markdownlint-cli": "^0.47.0",
     "prettier": "^3.4.2"
